# bedrockx

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: workflow.yml
src/bedrockx/: __init__.py
src/bedrockx/file/: __init__.py  utils.py
src/bedrockx/process/: __init__.py  data_process.py  multi_thread_process.py
src/bedrockx/utils/: log_manage.py
src/tests/: conftest.py  test_data_process.py  test_file_utils.py  test_multi_threading.py  test_utils.py
