[project]
name = "bedrockx"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ijson>=3.4.0.post0",
]

[project.optional-dependencies]

[tool.uv.workspace]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
